tests/ui/fail/attr-in-top-level-attr.stderr
error: only #[doc] attributes are permitted within #[substruct] arguments
 --> tests/ui/fail/attr-in-top-level-attr.rs:4:5
  |
4 |     #[derive(Debug)]
  |     ^^^^^^^^^^^^^^^^
